feat: 🎸 script src path 변경

--- a/vanillaJS-programmers/src/mission2_index.html
+++ b/vanillaJS-programmers/src/mission2_index.html
@@ -92,7 +92,7 @@
     </main>
 
   <!-- index.js에서 App.js 객체를 생성하면서 동적인 처리 수행 -->
-  <script src="../src/mission2/index.js" type="module"></script>   
+  <script src="./mission2/index.js" type="module"></script>   
   </section>
 </body>
 </html>
