--- a/vanillaJS-programmers/src/mission3_index.html
+++ b/vanillaJS-programmers/src/mission3_index.html
@@ -63,7 +63,7 @@
 <div class="app">
 </div>
 
-  <script src="../src/mission3/index.js" type="module"></script>   
+  <script src="./mission3/index.js" type="module"></script>   
   </section>
 </body>
 </html>
