--- a/vanillaJS-programmers/src/mission4_index.html
+++ b/vanillaJS-programmers/src/mission4_index.html
@@ -84,7 +84,7 @@
     </div>
 
   </div>
-  <script src="../src/mission4/index.js" type="module"></script>   
+  <script src="./mission4/index.js" type="module"></script>   
   </section>
 </body>
 </html>
